# python-pallycon

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg
pallycon/: pallycon.py
src/pallycon/: __init__.py
tests/: test_pallycon.py
