[metadata]
# replace with your username:
name = python-pallycon
version = 0.0.5
author = killua8p
author_email = killua8p@gmail.com
description = The python SDK for Pallycon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/killua8p/python-pallycon
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
install_requires =
    pycryptodome
python_requires = >=3.8

[options.package_data]
* = bin/*

[options.packages.find]
where = src
